--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "date-fns": "^2.14.0",
     "firebase": "^7.15.0",
     "lockr": "^0.8.5",
     "react": "^16.13.1",
