--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#ffffff",
-  "background_color": "#0b6319"
+  "theme_color": "#3c8cb5",
+  "background_color": "#3c8cb5"
 }
