fixed an error in manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#3c8cb5",
+  "theme_color": "#ffffff",
   "background_color": "#3c8cb5"
 }
