--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "victory": "^35.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "predeploy": "npm run build",
     "deploy": "npm run deploy",
     "eject": "react-scripts eject"
@@ -45,6 +45,9 @@
     ]
   },
   "devDependencies": {
-    "njwt": "^1.0.0"
+    "njwt": "^1.0.0",
+    "path": "^0.12.7",
+    "react-app-rewired": "^2.1.6",
+    "workbox-webpack-plugin": "^5.1.3"
   }
 }
