--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lockr": "^0.8.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.0.5",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
