--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "unfetch": "^4.1.0",
     "victory": "^35.0.2"
   },
   "scripts": {
